[package]
name = "bevy_app"
version = "0.1.0"
authors = []
edition = "2018"
repository = "https://github.com/mrk-its/bevy_webgl2_app_template"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", default-features=false}
bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2", optional=true}
winit = {version = "0.23.0", features = ["web-sys", "x11"], default-features = false}

[patch.'https://github.com/bevyengine/bevy']
bevy = {git = "https://github.com/bevyengine/bevy//", rev="704a11677881e762415b15e384c1b7a05fee7c1e", default-features=false}

[patch.'https://github.com/mrk-its/bevy_webgl2']
bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2//", rev="8421bfaccd70ca344317fc4807c4b0efd6a74763", default-features=false}

[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'
