[package]
name = "bevy_app"
version = "0.1.0"
authors = []
edition = "2018"
repository = "https://github.com/mrk-its/bevy_webgl2_app_template"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", default-features=false}
bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2", optional=true}
winit = {version = "0.24.0"}

[patch.'https://github.com/bevyengine/bevy']
bevy = {git = "https://github.com/bevyengine/bevy//", rev="d2e4327b14956b5028838fda538d45d2300e73f9", default-features=false}

[patch.'https://github.com/mrk-its/bevy_webgl2']
bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2//", rev="e1576c97ea4de6bbb8198a1969c9bb489715e31c", default-features=false}

[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'
